# healthcare-streamlit-1

./: .gitignore  README.md  requirements.txt
health_assistant/: .env  Dockerfile  app.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
health_assistant/pages/: chats.py  update_prompts.py
health_assistant/src/ui_core/: api_client.py  chats_view.py  db.py  prompts_repo.py  settings.py
